@@ -1,3 +1,8 @@
+2008-04-15  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 6405
+	* buildrun.cxx (compile_pass): Add STAPCONF_MODULE_NSECTIONS.
+
 2008-04-14  David Smith  <dsmith@redhat.com>
 
 	* elaborate.h (struct derived_probe_group): Removed
